kubernetes/sm-private-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-private
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-private
  template:
    metadata:
      labels:
        app: sm-private
    spec:
      containers:
      - name: sm-private
        image: oydeu/sm-private:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: sm-private
spec:
  selector:
    app: sm-private
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-private
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - sm-private.data-container.net
    secretName: sm-private-tls
  rules:
  - host: sm-private.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sm-private
            port:
              number: 80
